Use https to fetch MathJax.

--- a/README.org
+++ b/README.org
@@ -1,7 +1,7 @@
 #+TITLE: org-test
   #+BEGIN_HTML
          <script type="text/javascript"
-            src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+            src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
         </script>
   #+END_HTML
 
