Mark it not possible.

--- a/README.org
+++ b/README.org
@@ -14,3 +14,5 @@ for testing github-related org-mode questions
 =(solve a b)= should return \(X\), from \(AX=B\).
 
 [[http://stackoverflow.com/questions/31534084/how-can-i-get-github-to-display-inline-math-in-readme-org-file][SO question]]
+
+[[https://github.com/github/markup/issues/274][This]] seems to indicate that it's not possible. The issue was closed with no resolution afaict.
